Fixed logo for pixel-perfection, also deleted old reference and renamed polygon-logo-2.png to polygon-logo.png. Changed #navbar div to #headbar, since it includes elements other than navigation (like logo, social AND nav). Added #navbar with unordered list, styled to recreate horizontal menu in closest font-family I could manage, almost pixel perfect letter-spacing and positioning, also added correct a:hover pseudo-class colour taken from website reference. Needs a little bit of work; don't like headbar div overlapping logo, should be able to butt up against it, need to sort out two select options (esports and entertainment) which should also fix menu item spacing, need to fix formatting issue when page is shrunk horizontally as <ul> items flow down instead of just sliding out of view.

--- a/2-css/public_html/css/main.css
+++ b/2-css/public_html/css/main.css
@@ -1,18 +1,52 @@
-#navbar {
+#headbar {
 	height: 75px;
 	width: 100%;
 	background: linear-gradient(to right, #8F2B88, #FE0052);
+	float: left;
+	position: relative;
 }
 
-#navbar img {
-	position: relative;
-	top: 5px;
-	left: -1px;
+#headbar img {
+	margin: 5px 0px;
+	float: left;
 }
 
 #left-column {
 	height: 2000px;
 	width: 70%;
+}
+
+#navbar {
+	height: 100%;
+	position: relative;
+	left: 32px;
+}
+
+#navbar ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+	position: relative;
+	top: 15px;
+	height: 100%;
+}
+
+#navbar ul li {
+	display: inline;
+	float: left;
+	margin: 12px;
+}
+
+#navbar a {
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 10pt;
+	text-decoration: none;
+	color: white;
+	letter-spacing: -0.4px;
+}
+
+#navbar a:hover {
+	color: #32283C;
 }
 
 /*
